# bagx

./: .gitignore  404.html  CLAUDE.md  README.md  eval_report_demo.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: bagx-action-smoke.yml  ci.yml  docs.yml  publish.yml
api/anomaly/: index.html
api/benchmark/: index.html
api/compare/: index.html
api/eval/: index.html
api/export/: index.html
api/reader/: index.html
api/scenario/: index.html
api/scene/: index.html
api/sync/: index.html
bagx/: __init__.py  anomaly.py  ask.py  badge.py  batch.py  benchmark.py  cli.py  compare.py  contracts.py  custom_rules.py  diff.py  domain_plugins.py  eval.py  eval_findings.py  export.py  findings.py  mcp_server.py  reader.py  report_html.py  scenario.py  scene.py  schema.py  sync.py  topic_filters.py  tune.py
bagx/rule_plugins/: warehouse_bot.json
bagx/schema/: findings.schema.json
benchmarks/: non_slam_suite.json  open_data_suite.json  scoreboard.json
docs/: getting-started.md  index.md  scoreboard.md
docs/api/: anomaly.md  benchmark.md  compare.md  eval.md  export.md  reader.md  scenario.md  scene.md  sync.md
docs/demo/: index.html  sample_bag.db3
docs/guide/: anomaly.md  ask.md  batch.md  benchmark.md  compare.md  custom-rules.md  diff.md  domain-plugins.md  eval.md  export.md  github-action.md  mcp.md  scenario.md  scene.md  sync.md
docs/scoreboard/: why-autoware-all-sensors-scores-72.md  why-euroc-mh01-imu-is-noisy.md  why-ntu-viral-imu-is-noisy.md  why-ouster-os0-32-scores-77.md
examples/custom_rules/: warehouse_bot.json
examples/domains/: rtk_gnss.py
examples/github_actions/: README.md  bagx-action-baseline.yml  bagx-action-pr.yml  bagx-pr-check.yml
getting-started/: index.html
guide/anomaly/: index.html
guide/ask/: index.html
guide/batch/: index.html
guide/benchmark/: index.html
guide/compare/: index.html
guide/custom-rules/: index.html
guide/diff/: index.html
guide/domain-plugins/: index.html
guide/eval/: index.html
guide/export/: index.html
guide/github-action/: index.html
guide/mcp/: index.html
guide/scenario/: index.html
guide/scene/: index.html
guide/sync/: index.html
scoreboard/: index.html
scoreboard/why-autoware-all-sensors-scores-72/: index.html
scoreboard/why-euroc-mh01-imu-is-noisy/: index.html
scoreboard/why-ntu-viral-imu-is-noisy/: index.html
scoreboard/why-ouster-os0-32-scores-77/: index.html
scripts/: fetch_scoreboard_bags.sh  generate_demo_bag.py  generate_docs.py  generate_scoreboard.py  install_ros_overlay.py  prepare_ci_benchmark.py  run_benchmark_smoke.py  run_ros_dogfood.py  trigger_moveit_plan.py  trigger_nav2_goal.py  verify_ros1_dataset.sh
scripts/nav2_headless/: gz_waffle_headless.sdf.xacro  gz_waffle_headless_gpu_lidar.sdf.xacro  tb3_headless_launch.py  tb3_headless_world.sdf.xacro
search/: search_index.json
tests/: conftest.py  helpers.py  test_anomaly.py  test_ask.py  test_badge.py  test_batch.py  test_benchmark.py  test_cdr_parsers.py  test_cli.py  test_compare.py  test_contracts.py  test_custom_rules.py  test_diff.py  test_domain_plugins.py  test_edge_cases.py  test_endianness.py  test_eval.py  test_export.py  test_findings.py  test_findings_schema.py  test_logging.py  test_mcap.py  test_mcp.py  test_multi_segment.py  test_reader.py  test_readme_examples.py  test_report_html.py  test_ros1.py  test_scenario.py  test_scene.py  test_schema.py  test_scoreboard.py  test_sync.py  test_topic_filters.py  test_tune.py
tests/fixtures/tune/: fast_lio_multi_bag.yaml
