[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bagx"
version = "0.1.0"
description = "Post-processing analysis engine for ROS2 rosbag data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
ros = [
    "rosbag2_py",
]
mcap = [
    "mcap>=1.0.0",
    "mcap-ros2-support>=0.5.0",
]
llm = [
    "anthropic>=0.30.0",
    "openai>=1.30.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/rsasaki0109/bagx"
Repository = "https://github.com/rsasaki0109/bagx"
Issues = "https://github.com/rsasaki0109/bagx/issues"

[project.scripts]
bagx = "bagx.cli:app"

[tool.setuptools.packages.find]
include = ["bagx*"]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[tool.coverage.run]
source = ["bagx"]
omit = ["bagx/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/test_mcap.py" = ["E402"]
